add: begining of cahier des charges for ohow

--- a/how-arch.tex
+++ b/how-arch.tex
@@ -25,7 +25,7 @@
 \makeatother
 
 
-\hspace*{-2cm}
+% \hspace*{-2cm}
 \begin{tikzpicture}[x=5mm,y=5mm,
                     dir/.style={},
                     fsnode/.style={},
